<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bacground2"
    tools:context="com.example.bakibillah.uberet.MainActivity">


    <LinearLayout
        android:id="@+id/upperTextLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066">

        <TextView
            android:id="@+id/textViewUber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/u_b_e_r"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewPartnet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/partner"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewrider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/looking_for_the_rider_app"
        android:textColor="@color/colorBottom"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898">

        <Button
            android:id="@+id/buttonSIgnIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_signin_backgroun"
            android:text="@string/sign_in"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/buttonReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_reg_background"
            android:text="@string/registration"
            android:textColor="#ffffff" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
